; ModuleID = '/home/carl/AnghaBench/lwan/src/samples/techempower/extr_database.c_db_connect_mysql.c'
source_filename = "/home/carl/AnghaBench/lwan/src/samples/techempower/extr_database.c_db_connect_mysql.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.db = type { i32 }
%struct.db_mysql = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@.str = private unnamed_addr constant [5 x i8] c"utf8\00", align 1
@db_disconnect_mysql = common dso_local global i32 0, align 4
@db_prepare_mysql = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.db* @db_connect_mysql(i8* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca %struct.db*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.db_mysql*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  %11 = call %struct.db_mysql* @malloc(i32 12)
  store %struct.db_mysql* %11, %struct.db_mysql** %10, align 8
  %12 = load %struct.db_mysql*, %struct.db_mysql** %10, align 8
  %13 = icmp ne %struct.db_mysql* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %4
  store %struct.db* null, %struct.db** %5, align 8
  br label %62

15:                                               ; preds = %4
  %16 = call i32 @mysql_init(i32* null)
  %17 = load %struct.db_mysql*, %struct.db_mysql** %10, align 8
  %18 = getelementptr inbounds %struct.db_mysql, %struct.db_mysql* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 4
  %19 = load %struct.db_mysql*, %struct.db_mysql** %10, align 8
  %20 = getelementptr inbounds %struct.db_mysql, %struct.db_mysql* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %26, label %23

23:                                               ; preds = %15
  %24 = load %struct.db_mysql*, %struct.db_mysql** %10, align 8
  %25 = call i32 @free(%struct.db_mysql* %24)
  store %struct.db* null, %struct.db** %5, align 8
  br label %62

26:                                               ; preds = %15
  %27 = load %struct.db_mysql*, %struct.db_mysql** %10, align 8
  %28 = getelementptr inbounds %struct.db_mysql, %struct.db_mysql* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i8*, i8** %6, align 8
  %31 = load i8*, i8** %7, align 8
  %32 = load i8*, i8** %8, align 8
  %33 = load i8*, i8** %9, align 8
  %34 = call i32 @mysql_real_connect(i32 %29, i8* %30, i8* %31, i8* %32, i8* %33, i32 0, i32* null, i32 0)
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %37, label %36

36:                                               ; preds = %26
  br label %55

37:                                               ; preds = %26
  %38 = load %struct.db_mysql*, %struct.db_mysql** %10, align 8
  %39 = getelementptr inbounds %struct.db_mysql, %struct.db_mysql* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = call i64 @mysql_set_character_set(i32 %40, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %43, label %44

43:                                               ; preds = %37
  br label %55

44:                                               ; preds = %37
  %45 = load i32, i32* @db_disconnect_mysql, align 4
  %46 = load %struct.db_mysql*, %struct.db_mysql** %10, align 8
  %47 = getelementptr inbounds %struct.db_mysql, %struct.db_mysql* %46, i32 0, i32 1
  %48 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %47, i32 0, i32 1
  store i32 %45, i32* %48, align 4
  %49 = load i32, i32* @db_prepare_mysql, align 4
  %50 = load %struct.db_mysql*, %struct.db_mysql** %10, align 8
  %51 = getelementptr inbounds %struct.db_mysql, %struct.db_mysql* %50, i32 0, i32 1
  %52 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %51, i32 0, i32 0
  store i32 %49, i32* %52, align 4
  %53 = load %struct.db_mysql*, %struct.db_mysql** %10, align 8
  %54 = bitcast %struct.db_mysql* %53 to %struct.db*
  store %struct.db* %54, %struct.db** %5, align 8
  br label %62

55:                                               ; preds = %43, %36
  %56 = load %struct.db_mysql*, %struct.db_mysql** %10, align 8
  %57 = getelementptr inbounds %struct.db_mysql, %struct.db_mysql* %56, i32 0, i32 0
  %58 = load i32, i32* %57, align 4
  %59 = call i32 @mysql_close(i32 %58)
  %60 = load %struct.db_mysql*, %struct.db_mysql** %10, align 8
  %61 = call i32 @free(%struct.db_mysql* %60)
  store %struct.db* null, %struct.db** %5, align 8
  br label %62

62:                                               ; preds = %55, %44, %23, %14
  %63 = load %struct.db*, %struct.db** %5, align 8
  ret %struct.db* %63
}

declare dso_local %struct.db_mysql* @malloc(i32) #1

declare dso_local i32 @mysql_init(i32*) #1

declare dso_local i32 @free(%struct.db_mysql*) #1

declare dso_local i32 @mysql_real_connect(i32, i8*, i8*, i8*, i8*, i32, i32*, i32) #1

declare dso_local i64 @mysql_set_character_set(i32, i8*) #1

declare dso_local i32 @mysql_close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
